PR/50367: Stefan Schaeckeler: libc resolver library does not resolve host names with underscores ("_"). According to resolv.conf(5) RES_NOCHECKNAME is on by default; well, it is and gethostbyname(3) obeys it (gethnamaddr.c:maybe_ok), but getaddrinfo(3) up till this commit not. XXX: pullup-7, pullup-6